💄 feat: checkout mediaqueries

--- a/wp-content/themes/eyeconbeauty/scss/bag/_items-table.scss
+++ b/wp-content/themes/eyeconbeauty/scss/bag/_items-table.scss
@@ -35,15 +35,21 @@
     
     tbody {
       @include d-flex(column, 1rem);
+      width: 100%;
+      align-items: stretch;
     }
 
     tfoot {
       @include d-flex(column, 0.5rem);
+      width: 100%;
+      align-items: stretch;
     }
 
     .cart_item {
       @include d-flex(row, 0);
       justify-content: space-between;
+      width: 100%;
+      flex: 1;
       .product-info {
         @include d-flex(row, 0.5rem);
         
@@ -63,10 +69,10 @@
             height: 75px;
             object-fit: cover;  
 
-            @include mq(min-width, $m-wd) {
-              width: 88px;
-              height: 100px;
-            }
+            // @include mq(min-width, $m-wd) {
+            //   width: 88px;
+            //   height: 100px;
+            // }
           }
         }
 
