--- a/wp-content/themes/eyeconbeauty/scss/account/_wrapper.scss
+++ b/wp-content/themes/eyeconbeauty/scss/account/_wrapper.scss
@@ -58,5 +58,22 @@
       }
     }
 
+    .checkout-cart {
+      max-width: none;
+      margin: 0;
+  
+      @include mq(min-width, $m-wd) {
+        padding: 0;
+        display: block;
+      }
+  
+      @include mq(min-width, $l-wd) {
+        padding: 0;
+      }
+  
+      @include mq(min-width, $xl-wd) {
+        padding: 0;
+      }
+    }
   }
 }
