💄 feat: remove change of font size on mq

--- a/wp-content/themes/eyeconbeauty/scss/about/_community-slider.scss
+++ b/wp-content/themes/eyeconbeauty/scss/about/_community-slider.scss
@@ -98,7 +98,7 @@
 
         @include mq(min-width, $m-wd) {
           span {
-            font-size: 0.833333rem;
+            //font-size: 0.833333rem;
           }
         }
       }
