--- a/wp-content/themes/eyeconbeauty/scss/account/_address.scss
+++ b/wp-content/themes/eyeconbeauty/scss/account/_address.scss
@@ -9,7 +9,7 @@
       margin-left: 1rem;
       font-style: normal;
       @include mq(min-width, $m-wd) {
-        font-size: 0.75rem;
+        //font-size: 0.75rem;
       }
     }
 
@@ -20,7 +20,7 @@
       font-weight: 600;
       border-bottom: 1px solid $text-color;
       @include mq(min-width, $m-wd) {
-        font-size: 0.75rem;
+        //font-size: 0.75rem;
       }
     }
   }
