--- a/wp-content/themes/eyeconbeauty/scss/account/_orders.scss
+++ b/wp-content/themes/eyeconbeauty/scss/account/_orders.scss
@@ -37,7 +37,7 @@
       padding-bottom: 2rem;
 
       @include mq(min-width, $l-wd) {
-        font-size: 0.75rem;
+        //font-size: 0.75rem;
       }
 
       td {
@@ -51,7 +51,7 @@
       .btn  {
         padding: 0.5rem 1rem;
         @include mq(min-width, $l-wd) {
-          font-size: 0.75rem;
+          //font-size: 0.75rem;
         }
   
       }
