--- a/wp-content/themes/eyeconbeauty/scss/checkout/_payment.scss
+++ b/wp-content/themes/eyeconbeauty/scss/checkout/_payment.scss
@@ -15,8 +15,8 @@
         text-transform: uppercase;
 
         @include mq(min-width, $m-wd) {
-          padding: 0.833333rem 1rem;
-          font-size: 0.8333333rem;;
+          // padding: 0.833333rem 1rem;
+          // font-size: 0.8333333rem;;
         }
       }
 
@@ -41,7 +41,7 @@
     padding-top: 3rem;
     @include d-flex(column, 2rem);
     @include mq(min-width, $m-wd) {
-      font-size: 0.75rem;
+      //font-size: 0.75rem;
     }
 
     .terms-conditions-checkout {
@@ -58,9 +58,10 @@
       color: $bg-color;
       padding-left: 3rem;
       padding-right: 3rem;
+      font-family: $font-family;
 
       @include mq(min-width, $m-wd) {
-        padding: 0.75rem;
+        // padding: 0.75rem;
         font-size: 1rem;
       }
     }
