--- a/wp-content/themes/eyeconbeauty/scss/account/_access.scss
+++ b/wp-content/themes/eyeconbeauty/scss/account/_access.scss
@@ -24,7 +24,7 @@
     @include d-flex(column, 1rem);
     flex: 1;
     @include mq(min-width, $l-wd) {
-      gap: 0.75rem;
+      //gap: 0.75rem;
     }
 
     h3{
