--- a/wp-content/themes/eyeconbeauty/scss/bag/_coupons.scss
+++ b/wp-content/themes/eyeconbeauty/scss/bag/_coupons.scss
@@ -5,7 +5,7 @@
   .field-group {
     align-items: flex-end;
     @include mq(min-width, $m-wd) {
-      gap: 0.75rem;
+      //gap: 0.75rem;
     }
 
     .field {
@@ -22,7 +22,7 @@
       text-align: center;
 
       @include mq(min-width, $m-wd) {
-        font-size: 0.833333rem;
+        //font-size: 0.833333rem;
         padding: 0.833333rem 1.666667rem;
         flex: 0.5;
       }
