--- a/wp-content/themes/eyeconbeauty/scss/site/_footer.scss
+++ b/wp-content/themes/eyeconbeauty/scss/site/_footer.scss
@@ -25,7 +25,7 @@ footer {
     font-size: 0.833333rem;
 
     @include mq(min-width, $m-wd){
-      font-size: 0.75rem
+      //font-size: 0.75rem
     }
   }
 
@@ -56,7 +56,7 @@ footer {
           text-transform: uppercase;
 
           @include mq(min-width, $m-wd){
-            font-size: 1.25rem;
+            //font-size: 1.25rem;
           }
         }
 
@@ -101,7 +101,7 @@ footer {
           text-transform: uppercase;
           
           @include mq(min-width, $m-wd){
-            font-size: 1rem;
+            //font-size: 1rem;
           }
         }
 
@@ -111,7 +111,7 @@ footer {
             @include d-flex(row, 2rem);
             
             @include mq(min-width, $m-wd){
-              gap: 1.5rem;
+              //gap: 1.5rem;
             }
 
             .menu-item {
