--- a/wp-content/themes/eyeconbeauty/scss/site/_headers.scss
+++ b/wp-content/themes/eyeconbeauty/scss/site/_headers.scss
@@ -5,7 +5,7 @@ h1, h2, .h1, .h2 {
   margin: 0;
 
   @include mq(min-width, $m-wd){
-    font-size: 1.5rem;
+    // font-size: 1.5rem;
   }
 }
 
@@ -16,6 +16,6 @@ h3, .h3 {
   margin: 0;
 
   @include mq(min-width, $m-wd){
-    font-size: 1.0333333rem;
+    // font-size: 1.0333333rem;
   }
 }
