--- a/wp-content/themes/eyeconbeauty/scss/site/_site.scss
+++ b/wp-content/themes/eyeconbeauty/scss/site/_site.scss
@@ -7,9 +7,9 @@
 html {
 	font-size: 12px;
 
-	@include mq(min-width, 800px) {
-		font-size: 16px;
-	}
+	// @include mq(min-width, $m-wd) {
+	// 	font-size: 14px;
+	// }
 }
 
 body {
